--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This component is a simple React Pagination.",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "build": "webpack --mode production --config webpack.config.js",
     "start": "webpack-dev-server --mode development --config webpack.config.examples.js",
     "gh-build": "webpack --mode production --config webpack.config.examples.js",
@@ -24,15 +25,24 @@
   },
   "homepage": "https://github.com/naoki85/react-simple-pagination-component#readme",
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-enzyme": "^7.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
