--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-simple-pagination-component",
+  "name": "@naoki85/react-simple-pagination-component",
   "version": "0.1.0",
   "description": "This component is a simple React Pagination.",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "test": "jest",
     "build": "webpack --mode production --config webpack.config.js",
+    "publishOnly": "npm run build",
     "start": "webpack-dev-server --mode development --config webpack.config.examples.js",
     "gh-build": "webpack --mode production --config webpack.config.examples.js",
     "gh-deploy": "gh-pages -d examples/dist",
@@ -54,5 +55,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.3.3"
+  },
+  "peerDependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4"
   }
 }
