--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc && cp src/index.css dist/index.css",
-    "publishOnly": "npm run build",
-    "start": "webpack-dev-server --mode development --config webpack.config.examples.js",
-    "gh-build": "webpack --mode production --config webpack.config.examples.js",
-    "gh-deploy": "gh-pages -d examples/dist",
-    "gh-publish": "npm run gh-build && npm run gh-deploy"
+    "publishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -54,8 +50,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.3.3"
+    "@fortawesome/react-fontawesome": "^0.1.4"
   },
   "peerDependencies": {
     "react": "^16.9.0",
