--- a/examples/package.json
+++ b/examples/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^3.4.2",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "minimist": ">=1.2.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "style-loader": "^1.1.3",
