--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^24.9.0",
     "jest-css-modules": "^2.1.0",
     "jest-enzyme": "^7.1.0",
+    "minimist": ">=1.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0",
